# Lite-Exchange

./: .clang-format  .gitignore  CMakeLists.txt  MatchingEngine.cpp  MatchingEngine.hpp  Order.cpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  README.md  a.out  compile_commands.json  main.cpp  test.cpp  test_data.txt  visualizer.py
bench/: BenchEndToEnd.cc  BenchOrderBook.cc  BenchQueues.cc  BookSeeder.hpp  TrafficGenerator.hpp
benchmark/: LOB_Bechmark.cpp
client/: Logger.hpp  MatchingEngine.cpp  MatchingEngine.hpp  Order.cpp  OrderBook.hpp  OrderBookWidget.py  SocketWrapper.cpp  SocketWrapper.hpp  a.out  data.txt  main.cpp  main.py  test_data.txt  visualizer.py
server/: MatchingEngine.cpp  MatchingEngine.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  OrderBookWidget.py  SocketThread.py  SocketWrapper.cpp  SocketWrapper.hpp  a.out  main.cpp  main.py
src/: LimitOrderBook.cpp  LimitOrderBook.hpp  LimitOrderBookSnapshot.cpp  LimitOrderBookSnapshot.hpp  LimitTree.hpp  Structures.hpp  a.out
src/FIX/: FillReport.hpp  FixMessage.hpp  FixMessageBuilder.hpp  FixSession.cpp  FixSession.hpp  FixSessionManager.hpp
src/FIX/client/: FIXClient.cpp  FIXClientApplication.cpp  FIXClientApplication.hpp  sender.cfg  tag_data.txt  test_cases_simple.txt  test_data.txt
src/FIX/client/store/: FIX.4.2-SENDER-ACCEPTOR.body  FIX.4.2-SENDER-ACCEPTOR.header  FIX.4.2-SENDER-ACCEPTOR.session  FIX.4.4-SENDER-ACCEPTOR.body  FIX.4.4-SENDER-ACCEPTOR.header  FIX.4.4-SENDER-ACCEPTOR.session
src/FIX/server/: FIXServer.cpp  FIXServerApplication.cpp  FIXServerApplication.hpp  acceptor.cfg
src/FIX/server/store/: FIX.4.2-ACCEPTOR-SENDER.body  FIX.4.2-ACCEPTOR-SENDER.header  FIX.4.2-ACCEPTOR-SENDER.session  FIX.4.2-SENDER-ACCEPTOR.session
src/LimitOrderBook.dSYM/Contents/: Info.plist
src/LimitOrderBook.dSYM/Contents/Resources/DWARF/: LimitOrderBook
src/LimitOrderBook.dSYM/Contents/Resources/Relocations/x86_64/: LimitOrderBook.yml
src/LimitTree.dSYM/Contents/: Info.plist
src/LimitTree.dSYM/Contents/Resources/DWARF/: LimitTree
src/LimitTree.dSYM/Contents/Resources/Relocations/x86_64/: LimitTree.yml
src/OMS/: LimitTree.hpp  main.cpp
src/Utility/: MessageQueue.hpp  SPSC_Queue.hpp
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/a.out.dSYM/Contents/Resources/Relocations/x86_64/: a.out.yml
src/client/: ClientMain.cpp  FixClient.cpp  FixClient.hpp  FixClientAutomation.hpp  client  client_main.cpp  fix_client_automation.cpp  fix_client_automation.hpp  main.cpp
src/engine/: EngineDispatcher.hpp
src/fix/: FillReport.hpp  FixSession.hpp
src/gateway/: SessionRegistry.hpp  SymbolRegistry.hpp
src/ipc/: FillEvent.hpp  MPSC_Queue.hpp  OrderEvent.hpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
src/matching-engine/: LimitTree.hpp  OrderBook.cpp  OrderBook.hpp  OrderPool.hpp  OrderStructures.hpp  Structures.hpp  Test_LimitTree.cpp  main.cpp
src/net/: EventLoop.hpp  IoHandler.hpp  SocketUtils.hpp
src/server/: FixServer.hpp  FixServerInterface.hpp  ServerBase.hpp  async_connect_handler.hpp  fix_server.cpp  fix_server.hpp  server  serverMain.cpp  server_main.cpp
src/utility/: MessageQueue.hpp  SPSC_Queue.hpp  ThreadAffinity.hpp
test/: Test_LimitTree.cpp  a.out  limitTreeTest
test/FIX/: Test_FixMessage.cpp
test/Integration/: Test_MultiClient.cc
test/LOB/: Test_LimitTree.cpp
test/OrderBook/: Test_OrderBook.cc
test/SPSC/: Test_SPSC.cc
